--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   mobx: ^2.2.1
   build_runner: ^2.4.6
   flutter_mobx: ^2.1.1
+  fl_chart: ^0.65.0
+  intl: ^0.19.0
 
 dev_dependencies:
   mobx_codegen: ^2.1.1
