Aplicando conceitos de clean code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_mobx: ^2.1.1
   fl_chart: ^0.66.0
   intl: ^0.19.0
+  skeletonizer: ^1.0.1
 
 dev_dependencies:
   mobx_codegen: ^2.1.1
