--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fl_chart: ^0.66.0
   intl: ^0.19.0
   skeletonizer: ^1.0.1
+  http: ^1.2.0
 
 dev_dependencies:
   mobx_codegen: ^2.1.1
