--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,18 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family : Didact
+      fonts:
+        - asset: assets/fonts/Didact.ttf
 
+    - family : LeagueSpartan
+      fonts:
+        - asset: assets/fonts/LeagueSpartan.ttf
+
+    - family : Didact
+      fonts:
+        - asset: assets/fonts/Didact.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
