--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.19.0
   skeletonizer: ^1.0.1
   http: ^1.2.0
+  masked_text_field: ^1.0.2
 
 dev_dependencies:
   mobx_codegen: ^2.1.1
