--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="financas"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+     
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -22,6 +24,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <!-- // -->
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <!-- // -->
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
